# cookiecutter-template-python

./: LICENSE  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml
docs/: change-log.md  getting-started.md
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yaml  pyproject.toml
{{cookiecutter.project_slug}}/docs/: index.md
{{cookiecutter.project_slug}}/tests/lib/: test_dummy.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_pkg_name}}/: .gitignore  container.py  logger.py  settings.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_pkg_name}}/entrypoints/: hello.py  main.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_pkg_name}}/lib/: dummy.py
