[build-system]
requires = ["setuptools >= 69.0.3", "wheel >= 0.42.0", "setuptools-scm >= 8.0.4"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiecutter-template-python"
version = "0.3.0"
authors = [{name = "Jacek Siciarek", email = "siciarek@gmail.com"}]
license = { file = "LICENSE" }
description = "A Cookiecutter Python Template"
requires-python = ">=3.11"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-include-markdown-plugin"
]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://github.com/siciarek/'
Documentation = "https://github.com/siciarek/cookiecutter-template-python"
Repository = "https://github.com/siciarek/cookiecutter-template-pythono"
Changelog = "https://github.com/siciarek/cookiecutter-template-python/docs/changelog.md"


[tool.git-changelog]
bump = "minor"
convention = "conventional"
in-place = true
#filter-commits = "0.5.0.."
marker-line = "<!-- insertion marker -->"
output = "docs/changelog.md"
parse-refs = false
parse-trailers = false
provider = "gitlab"
repository = "."
sections = "fix,feat"
template = "keepachangelog"
version-regex = "^## \\\\[(?P<version>v?[^\\\\]]+)"
versioning = "semver"
zerover = true

[jinja_context]
footer = "Copyright 2024 Jacek Siciarek"
