[build-system]
requires = ["setuptools >= 69.0.3", "wheel >= 0.42.0", "setuptools-scm >= 8.0.4"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_short_description }}."
readme = "README.md"
dynamic = ["version"]
{%- if cookiecutter.python_version == "py3.9" %}
requires-python = ">=3.9,<3.10"
{%- elif cookiecutter.python_version == "py3.10" %}
requires-python = ">=3.9,<3.11"
{%- elif cookiecutter.python_version == "py3.11" %}
requires-python = ">=3.9,<3.12"
{%- elif cookiecutter.python_version == "py3.12" %}
requires-python = ">=3.9,<3.13"
{%- endif %}
license = { file = "LICENSE" }
authors = [{ name = "Jacek Siciarek", email = "siciarek@gmail.com" }]
maintainers = [{ name = "Jacek Siciarek", email = "siciarek@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
{%- if cookiecutter.python_version == "py3.9" %}
    "Programming Language :: Python :: 3.9",
{%- elif cookiecutter.python_version == "py3.10" %}
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
{%- elif cookiecutter.python_version == "py3.11" %}
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
{%- elif cookiecutter.python_version == "py3.12" %}
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
{%- endif %}
]
dependencies = [
    "click~=8.1.8",
    "dependency_injector~=4.46.0",
]

[project.urls]
Homepage = "https://github.com/siciarek/{{ cookiecutter.project_slug }}"
Documentation = "https://github.com/siciarek/{{ cookiecutter.project_slug }}/tree/master/docs"
Repository = "https://github.com/siciarek/{{ cookiecutter.project_slug }}"
Changelog = "https://github.com/siciarek/{{ cookiecutter.project_slug }}/blob/master/docs/change-log.md"

[project.optional-dependencies]
doc = [
    "mkdocs~=1.5.3",
    "mkdocs-material~=9.5.17",
    "mkdocs-material-extensions~=1.3.1",
    "pip-tools~=7.4.1",
]
test = [
    "pytest~=8.0.2",
    "pytest-xdist~=3.5.0",
    "pytest-cov~=4.1.0",
    "pytest-mock~=3.12.0",
    "tox~=4.14.2",
]
analysis = [
    "radon~=6.0.1",
    "ruff~=0.3.4",
    "pre_commit~=3.6.2",
    "bandit[toml]~=1.7.8",
    "licensecheck~=2024.2",
]
dev = [
    "{{ cookiecutter.project_slug }}[test]",
    "{{ cookiecutter.project_slug }}[analysis]",
    "{{ cookiecutter.project_slug }}[doc]",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["{{ cookiecutter.project_pkg_name }}*"]
exclude = ["tests*", "bin*", "build*", "docs*", "tmp*"]

[tool.setuptools.package-data]
config = ["*"]

[tool.setuptools.dynamic]
version = { attr = "{{ cookiecutter.project_pkg_name }}.__version__" }

[project.scripts]
main = "{{ cookiecutter.project_pkg_name }}.entrypoints:main.main"

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--verbose -p no:cacheprovider --capture=no --cov-report=xml:coverage-reports/app.coverage-report.xml --cov-report=term-missing:skip-covered --cov-report=html --cov={{ cookiecutter.project_pkg_name }}"
testpaths = [
    "tests",
]
pythonpath = [
    "."
]

[tool.bandit]
exclude_dirs = [".venv", "venv", "tmp", "logs", "build", "tests"]
tests = []
skips = []

[tool.licensecheck]
using = "requirements:docs/requirements.txt;docs/requirements-dev.txt"
format = "simple"  # Output format. one of: json, markdown, html, csv, ansi, simple. default=simple

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
{%- if cookiecutter.python_version == "py3.9" %}
envlist = py{39}
{%- elif cookiecutter.python_version == "py3.10" %}
envlist = py{39,310}
{%- elif cookiecutter.python_version == "py3.11" %}
envlist = py{39,310,311}
{%- elif cookiecutter.python_version == "py3.12" %}
envlist = py{39,310,311,312}
{%- endif %}
[testenv]
deps:
    .[dev]
commands =
    pytest
"""


[tool.git-changelog]
bump = "minor"
convention = "conventional"
in-place = true
#filter-commits = "0.5.0.."
marker-line = "<!-- insertion marker -->"
output = "docs/changelog.md"
parse-refs = false
parse-trailers = false
provider = "gitlab"
repository = "."
sections = "fix,feat"
template = "keepachangelog"
version-regex = "^## \\\\[(?P<version>v?[^\\\\]]+)"
versioning = "semver"
zerover = true

[jinja_context]
footer = "Copyright 2024 Jacek Siciarek"